--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image finder</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+    crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <form class="search-form" id="search-form">
+  <form class="search-form js-search-form" id="search-form">
     <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+    <button class="btn js-btn" type="submit"> search</button>
   </form>
-
-  <ul class="gallery">
+  <ul class="gallery js-gallery">
     <!-- Список <li> с карточками изображений -->
   </ul>
+  <button type="button" class="load-more btn js-load-more" data-action="load-more">
+    Load more
+  </button>
 
   <script src="./index.js"></script>
 </body>
